--- a/package.json
+++ b/package.json
@@ -38,7 +38,13 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.11.1",
-    "@boundaryml/baml": "^0.201.0"
+    "@actions/github": "^6.0.1",
+    "@boundaryml/baml": "^0.201.0",
+    "@octokit/rest": "^21.1.1",
+    "@types/js-yaml": "^4.0.9",
+    "@types/minimatch": "^5.1.2",
+    "js-yaml": "^4.1.0",
+    "minimatch": "^9.0.5"
   },
   "devDependencies": {
     "@eslint/compat": "^1.3.1",
