--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,8 @@ on:
 
 permissions:
   contents: read
-
+  pull-requests: write
+  
 jobs:
   test-typescript:
     name: TypeScript Tests
@@ -57,7 +58,11 @@ jobs:
         id: test-action
         uses: ./
         with:
-          milliseconds: 2000
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          commands: |
+            review-graphql-schema
+            review-database-schema
+
 
       - name: Print Output
         id: output
