--- a/.llm/commands.yaml
+++ b/.llm/commands.yaml
@@ -1,59 +1,63 @@
-handle: '@llm_command'
+handle: llm_command
+
 commands:
-  review-code:
-    description: 'Reviews code changes for quality, style, and potential issues'
+  review-database-schema:
+    description:
+      Reviews database schema files for consistency, normalization, and naming
+      conventions.
     instructions:
-      - applyTo: '**/*.ts'
+      - applyTo: 'exmaples/sql-database/**/*.sql'
         prompt: |
-          Review this TypeScript file for code quality, potential bugs, and adherence to best practices.
-          Focus on:
-          - Type safety and proper TypeScript usage
-          - Error handling
-          - Code organization and readability
-          - Performance considerations
-          Provide specific, actionable feedback.
-      - applyTo: '**/*.js'
-        prompt: |
-          Review this JavaScript file for code quality, potential bugs, and best practices.
-          Focus on:
-          - Error handling
-          - Code organization and readability
-          - Security considerations
-          - Performance optimizations
-          Provide specific, actionable feedback.
-
-  review-config:
-    description: 'Reviews configuration files for correctness and security'
-    instructions:
-      - applyTo: '**/*.yml'
-        prompt: |
-          Review this YAML configuration file for:
-          - Syntax correctness
-          - Security best practices
-          - Proper structure and organization
-          - Missing or incorrect configurations
-          Provide specific recommendations for improvement.
-      - applyTo: '**/*.json'
-        prompt: |
-          Review this JSON configuration file for:
-          - Valid JSON syntax
-          - Proper structure
-          - Security considerations
-          - Best practices
-          Suggest improvements where applicable.
-
-  test-review:
-    description: 'Reviews test files for completeness and quality'
-    instructions:
-      - applyTo: '**/*.test.*'
-        prompt: |
-          Review this test file for:
-          - Test coverage and completeness
-          - Test structure and organization
-          - Assertion quality
-          - Edge case coverage
-          - Mock usage and test isolation
-          Suggest additional tests or improvements.
+          Review this SQL schema definition. Check for normalization, naming conventions, and indexing.
+          Suggest improvements or raise warnings if there are any anti-patterns.
         files:
-          - path: 'jest.config.js'
-            name: 'Jest configuration'
+          - path: 'guidelines/db-schema-style.md'
+            name: 'Database schema guidelines'
+
+  review-graphql-schema:
+    description:
+      Reviews GraphQL schema files for consistency and best practices.
+    instructions:
+      - applyTo: 'exmaples/graphql-blog/**/*.graphql'
+        prompt: |
+          Review this GraphQL schema file against the provided style and naming guidelines.
+          Highlight any issues and suggest improvements.
+        files:
+          - path: 'guidelines/graphql-style.md'
+            name: 'GraphQL style guide'
+
+  summarize-discussion:
+    description: Summarizes the discussion in a pull request thread.
+    instructions:
+      - applyTo: '.'
+        prompt: |
+          Summarize the conversation between reviewers and authors in this pull request.
+          Highlight key concerns, decisions, and remaining open questions.
+
+  update-changelog:
+    description:
+      Updates or creates the CHANGELOG.md file based on changes in the pull
+      request.
+    instructions:
+      - applyTo: 'exmaples/auth-api/**/*'
+        prompt: |
+          Based on the code changes and PR title and description, generate or update an entry in CHANGELOG.md.
+          Maintain consistent formatting and group changes by type (e.g., Feature, Fix, Docs).
+        files:
+          - path: 'auth-api/CHANGELOG.md'
+          - path: 'guidelines/changelog-format.md'
+            name: 'Changelog formatting template'
+
+  review-typescript-code:
+    description:
+      Reviews TypeScript code for best practices, type safety, and potential
+      issues.
+    instructions:
+      - applyTo: 'exmaples/auth-api/**/*.ts'
+        prompt: |
+          Review this TypeScript code for:
+          - Type safety and proper TypeScript usage
+          - Code structure and organization
+          - Potential bugs or security issues
+          - Best practices and conventions
+          Provide specific suggestions for improvement.
