--- a/.env.example
+++ b/.env.example
@@ -9,8 +9,17 @@ ACTIONS_STEP_DEBUG=true
 
 # GitHub Actions inputs should follow `INPUT_<name>` format (case-sensitive).
 # Hyphens should not be converted to underscores!
-INPUT_MILLISECONDS=2400
 
+# Action inputs from action.yml
+INPUT_commands=review-database-schema,review-graphql-schema,summarize-discussion
+INPUT_github-token=your_github_token_here
+
+# LLM API Keys for BAML clients (required for LLM functionality)
+OPENAI_API_KEY=your_openai_api_key_here
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
+
+GITHUB_EVENT_PATH=./event.json
+GITHUB_EVENT_NAME=pull_request
 # GitHub Actions default environment variables. These are set for every run of a
 # workflow and can be used in your actions. Setting the value here will override
 # any value set by the local-action tool.
