--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "@actions/core": "^1.11.1",
     "@actions/github": "^6.0.1",
     "@boundaryml/baml": "^0.201.0",
+    "@types/glob": "^8.1.0",
     "@types/js-yaml": "^4.0.9",
     "@types/minimatch": "^5.1.2",
+    "glob": "^10.4.5",
     "js-yaml": "^4.1.0",
     "minimatch": "^9.0.5"
   },
