--- a/action.yml
+++ b/action.yml
@@ -13,19 +13,23 @@ branding:
 inputs:
   commands:
     description:
-      'Comma-separated list of commands to execute (e.g.
-      "review-code,update-docs")'
+      'Comma-separated or newline-separated list of commands to execute (e.g.
+      "review-code,update-docs" or "review-code\nupdate-docs")'
     required: true
   github_token:
     description: 'GitHub token'
     required: true
     default: ${{ github.token }}
-  command_from_comment:
-    description:
-      'Whether to parse command from PR comment (for comment-triggered
-      workflows)'
+  config_path:
+    description: 'Path to the commands configuration file'
     required: false
-    default: 'false'
+    default: '.llm-commands.yaml'
+  # command_from_comment:
+  #   description:
+  #     'Whether to parse command from PR comment (for comment-triggered
+  #     workflows)'
+  #   required: false
+  #   default: 'false'
 
 # Define your outputs here.
 outputs:
