--- a/.github/workflows/demo-ci.yml
+++ b/.github/workflows/demo-ci.yml
@@ -31,6 +31,6 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           commands: |
-            review-graphql-schema:
+            review-graphql-schema
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
