--- a/.llm-commands.yaml
+++ b/.llm-commands.yaml
@@ -2,11 +2,16 @@ handle: llm_command
 
 # For provider name and options, see https://docs.boundaryml.com/ref/llm-client-providers/overview
 llm-clients:
-  # Currently, only one client is supported.
-  - provider: openai
+  large:
+    provider: openai
     options:
       api_key: env.OPENAI_API_KEY
-      model: gpt-4o-mini
+      model: gpt-4.1
+  small:
+    provider: openai
+    options:
+      api_key: env.OPENAI_API_KEY
+      model: gpt-4.1-mini
 
 commands:
   pr-ci-test:
